# cura

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
js/: cluster.js  param.js
src/: board.rs  create_forcefields.sql  create_table.sql  get_moldata.sql  get_molecules.sql  insert_forcefield.sql  insert_molecule.sql  lib.rs  main.rs  parse.rs  query.rs  serve.rs  store.rs  table.rs
src/board/: config.rs  handlers.rs  templates.rs
src/serve/: handlers.rs  templates.rs
src/sql/: add_to_dataset.sql  create_dataset.sql  create_molecules.sql  delete_dataset.sql  delete_forcefield.sql  get_forcefields.sql  get_molecules.sql  get_smiles.sql  get_smiles_matching.sql  insert_molecule.sql
src/table/: dataset.rs
templates/: base.html  cluster.html  index.html  param.html  preview.html
testfiles/: fingerprint.toml
work/: README.org
