[package]
name = "cura"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
rayon = "1.8.0"
rusqlite = { version = "0.31.0", features = ["bundled", "i128_blob"] }

clustrs = { path = "../clustrs" }
rdkit-rs = { path = "../rdkit-rs" }
openff-toolkit = { path = "/home/brent/omsf/rust/coprelos/openff-toolkit" }

[dev-dependencies]
tempfile = "3.10.1"
