[package]
name = "cura"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
postcard = { version = "1.0.8", features = ["use-std"] }
rayon = "1.8.0"
rusqlite = { version = "0.31.0", features = ["bundled", "i128_blob"] }

# web server
askama = "0.12.1"
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"

# local packages
clustrs = { path = "../clustrs" }
rdkit-rs = { path = "../rdkit-rs" }
openff-toolkit = { path = "/home/brent/omsf/rust/coprelos/openff-toolkit" }

[dev-dependencies]
tempfile = "3.10.1"
